--- a/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
+++ b/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
@@ -33,7 +33,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eth" translatesAutoresizingMaskIntoConstraints="NO" id="K5T-1h-MPD">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eth" translatesAutoresizingMaskIntoConstraints="NO" id="K5T-1h-MPD" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                     <rect key="frame" x="20" y="23" width="24" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="24" id="bGC-d6-lOg"/>
