--- a/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
+++ b/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
@@ -34,7 +34,7 @@
             <rect key="frame" x="0.0" y="0.0" width="461" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="owr-nd-dg6">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="owr-nd-dg6" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                     <rect key="frame" x="20" y="23" width="24" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="24" id="As9-Pj-bol"/>
