--- a/PlanetWallet/Resources/8_Tx.storyboard
+++ b/PlanetWallet/Resources/8_Tx.storyboard
@@ -66,7 +66,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rL1-mY-Twq" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="75" width="290" height="41"/>
+                                            <rect key="frame" x="15" y="75" width="345" height="41"/>
                                             <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="28"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -77,10 +77,10 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LyR-pX-O4Z">
-                                            <rect key="frame" x="20" y="168" width="280" height="55"/>
+                                            <rect key="frame" x="20" y="168" width="335" height="55"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYY-Tm-7Wn" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="135" height="55"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="162.5" height="55"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="55" id="ppr-KK-gJ6"/>
                                                     </constraints>
@@ -110,7 +110,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8N0-N1-0WA" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
-                                                    <rect key="frame" x="145" y="0.0" width="135" height="55"/>
+                                                    <rect key="frame" x="172.5" y="0.0" width="162.5" height="55"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="18"/>
                                                     <state key="normal" title="Transfer">
@@ -134,7 +134,7 @@
                                             </subviews>
                                         </stackView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eth" translatesAutoresizingMaskIntoConstraints="NO" id="aBi-76-FIZ" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                                            <rect key="frame" x="142.5" y="25" width="35" height="35"/>
+                                            <rect key="frame" x="170" y="25" width="35" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="mRI-uk-ewC"/>
                                                 <constraint firstAttribute="width" constant="35" id="rV1-ci-LyG"/>
@@ -144,7 +144,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CnF-g0-BZM" userLabel="Seperator view" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="251" width="320" height="1"/>
+                                            <rect key="frame" x="0.0" y="251" width="375" height="1"/>
                                             <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="Gr6-W1-DpX"/>
@@ -221,7 +221,7 @@
                     </view>
                     <connections>
                         <outlet property="balanceLb" destination="rL1-mY-Twq" id="ieJ-yg-6qv"/>
-                        <outlet property="footerView" destination="wOp-hK-YVe" id="dej-Fg-07g"/>
+                        <outlet property="footerView" destination="wOp-hK-YVe" id="ewJ-7F-C1W"/>
                         <outlet property="iconImgView" destination="aBi-76-FIZ" id="K5F-LY-kaM"/>
                         <outlet property="naviBar" destination="Qme-eB-Fim" id="jyA-29-nH7"/>
                         <outlet property="tableView" destination="iHH-g5-Dng" id="YoW-5z-dmf"/>
