--- a/PlanetWallet/Resources/3_Wallet.storyboard
+++ b/PlanetWallet/Resources/3_Wallet.storyboard
@@ -87,6 +87,16 @@
                                             <userDefinedRuntimeAttribute type="string" keyPath="data" value="문규송"/>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgWalletaddGenerateTxt" translatesAutoresizingMaskIntoConstraints="NO" id="9gg-jh-Su1" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
+                                        <rect key="frame" x="94.5" y="85" width="186" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="186" id="2DF-rN-9do"/>
+                                            <constraint firstAttribute="height" constant="20" id="4PY-ng-Pdz"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imgWalletaddGenerateTxtBk"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Rigel_III" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FqV-R8-76b" customClass="BlinkingTextView" customModule="PlanetWallet" customModuleProvider="target">
                                         <rect key="frame" x="10" y="119" width="355" height="119"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -115,26 +125,17 @@
                                             <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageToolbarCloseBlue"/>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgWalletaddGenerateTxt" translatesAutoresizingMaskIntoConstraints="NO" id="XNK-OP-bkY" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="94.5" y="85" width="186" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="d6j-Vc-YJj"/>
-                                            <constraint firstAttribute="width" constant="186" id="vXg-Tq-JDh"/>
-                                        </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imgWalletaddGenerateTxtBk"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="BGe-jt-N0X" firstAttribute="top" secondItem="rs9-pm-sdD" secondAttribute="top" constant="10" id="1Bf-uY-8TU"/>
                                     <constraint firstItem="aZa-MG-eGG" firstAttribute="top" secondItem="rs9-pm-sdD" secondAttribute="top" id="5P6-oq-6Qe"/>
+                                    <constraint firstItem="9gg-jh-Su1" firstAttribute="centerX" secondItem="rs9-pm-sdD" secondAttribute="centerX" id="6Ec-aY-NcC"/>
                                     <constraint firstItem="aZa-MG-eGG" firstAttribute="leading" secondItem="rs9-pm-sdD" secondAttribute="leading" id="7YS-HJ-ees"/>
                                     <constraint firstItem="279-ba-jES" firstAttribute="leading" secondItem="rs9-pm-sdD" secondAttribute="leading" constant="-20" id="8an-gb-Sxz"/>
-                                    <constraint firstItem="FqV-R8-76b" firstAttribute="top" secondItem="XNK-OP-bkY" secondAttribute="bottom" constant="14" id="Bp5-xA-Ihj"/>
+                                    <constraint firstItem="FqV-R8-76b" firstAttribute="top" secondItem="9gg-jh-Su1" secondAttribute="bottom" constant="14" id="9A6-9z-kaj"/>
+                                    <constraint firstItem="9gg-jh-Su1" firstAttribute="top" secondItem="BGe-jt-N0X" secondAttribute="bottom" constant="35" id="Cex-9q-ZIP"/>
                                     <constraint firstAttribute="trailing" secondItem="B7i-aE-687" secondAttribute="trailing" id="EJm-ly-L50"/>
-                                    <constraint firstItem="XNK-OP-bkY" firstAttribute="top" secondItem="BGe-jt-N0X" secondAttribute="bottom" constant="35" id="GAt-Sv-v2E"/>
                                     <constraint firstItem="279-ba-jES" firstAttribute="top" secondItem="rs9-pm-sdD" secondAttribute="top" id="I3d-s9-F4q"/>
                                     <constraint firstItem="QTE-bK-KeN" firstAttribute="centerX" secondItem="rs9-pm-sdD" secondAttribute="centerX" id="LkM-0I-bhm"/>
                                     <constraint firstItem="B7i-aE-687" firstAttribute="leading" secondItem="rs9-pm-sdD" secondAttribute="leading" id="ML7-HE-cJE"/>
@@ -150,7 +151,6 @@
                                     <constraint firstAttribute="bottom" secondItem="B7i-aE-687" secondAttribute="bottom" id="okP-7x-dkv"/>
                                     <constraint firstItem="GEk-BX-LpN" firstAttribute="leading" secondItem="rs9-pm-sdD" secondAttribute="leading" constant="10" id="rbJ-K0-d9p"/>
                                     <constraint firstAttribute="trailing" secondItem="FqV-R8-76b" secondAttribute="trailing" constant="10" id="sjy-8Z-X4J"/>
-                                    <constraint firstItem="XNK-OP-bkY" firstAttribute="centerX" secondItem="rs9-pm-sdD" secondAttribute="centerX" id="vsb-RA-fdz"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xgd-YE-dVD" userLabel="BtnContainer">
@@ -298,7 +298,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VmE-zL-nhO" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Zbi-dO-1fj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="537" y="-617"/>
+            <point key="canvasLocation" x="536.79999999999995" y="-617.54122938530736"/>
         </scene>
         <!--Wallet Add Controller-->
         <scene sceneID="JRM-8F-vJv">
@@ -1117,8 +1117,11 @@
                                             <action selector="didTouchedClose:" destination="zCZ-oN-aWM" eventType="touchUpInside" id="Nx4-Wa-hqe"/>
                                         </connections>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgWalletaddGenerateTxt" translatesAutoresizingMaskIntoConstraints="NO" id="yzP-Te-Uqj">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgWalletaddGenerateTxt" translatesAutoresizingMaskIntoConstraints="NO" id="yzP-Te-Uqj" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                                         <rect key="frame" x="96" y="85" width="183" height="31"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imgWalletaddGenerateTxtBk"/>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Rigel_III" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pUS-al-FoO" customClass="BlinkingTextView" customModule="PlanetWallet" customModuleProvider="target">
                                         <rect key="frame" x="10" y="130" width="355" height="111"/>
