--- a/PlanetWallet/Resources/8_Tx.storyboard
+++ b/PlanetWallet/Resources/8_Tx.storyboard
@@ -139,9 +139,6 @@
                                                 <constraint firstAttribute="height" constant="35" id="mRI-uk-ewC"/>
                                                 <constraint firstAttribute="width" constant="35" id="rV1-ci-LyG"/>
                                             </constraints>
-                                            <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="eth"/>
-                                            </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CnF-g0-BZM" userLabel="Seperator view" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="251" width="375" height="1"/>
@@ -585,7 +582,7 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3xh-eG-EKd" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="7.5" width="40" height="40"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0r-rT-YLZ">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0r-rT-YLZ" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                                     </imageView>
                                                                 </subviews>
