--- a/PlanetWallet/Views/4_Main/Components/TopMenuView.xib
+++ b/PlanetWallet/Views/4_Main/Components/TopMenuView.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="WoC-zK-da8">
-                    <rect key="frame" x="0.0" y="64" width="375" height="196"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="253"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m4k-H7-KKM">
                         <size key="itemSize" width="50" height="50"/>
@@ -51,10 +51,10 @@
             <color key="backgroundColor" red="0.11372549019607843" green="0.11764705882352941" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Lyc-Gc-26D" firstAttribute="centerX" secondItem="Jy3-mv-QNa" secondAttribute="centerX" id="4Cv-yd-rdX"/>
-                <constraint firstAttribute="bottom" secondItem="WoC-zK-da8" secondAttribute="bottom" constant="50" id="6Aw-dB-rVW"/>
+                <constraint firstAttribute="bottom" secondItem="WoC-zK-da8" secondAttribute="bottom" constant="37" id="6Aw-dB-rVW"/>
                 <constraint firstAttribute="bottom" secondItem="Lyc-Gc-26D" secondAttribute="bottom" constant="18" id="GI7-5t-TNN"/>
                 <constraint firstItem="WoC-zK-da8" firstAttribute="leading" secondItem="Gdr-qL-8oU" secondAttribute="leading" id="XLa-il-rWY"/>
-                <constraint firstItem="WoC-zK-da8" firstAttribute="top" secondItem="Gdr-qL-8oU" secondAttribute="top" constant="20" id="Ysq-rF-fMO"/>
+                <constraint firstItem="WoC-zK-da8" firstAttribute="top" secondItem="Jy3-mv-QNa" secondAttribute="top" constant="20" id="Ysq-rF-fMO"/>
                 <constraint firstItem="Gdr-qL-8oU" firstAttribute="trailing" secondItem="WoC-zK-da8" secondAttribute="trailing" id="zno-8L-eVr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
